// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@bottom-navigator-tab: component checks * empty 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
/>
`;

exports[`@bottom-navigator-tab: component checks * text/selected 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
      }
    }
    style={
      Object {
        "height": 40,
        "marginBottom": undefined,
        "tintColor": "#3366FF",
        "width": 40,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#3366FF",
      }
    }
  >
    Test
  </Text>
</View>
`;

exports[`@bottom-navigator-tab: component checks * text/unselected 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
      }
    }
    style={
      Object {
        "height": 40,
        "marginBottom": undefined,
        "tintColor": "#8992A3",
        "width": 40,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#8992A3",
      }
    }
  >
    Test
  </Text>
</View>
`;

exports[`@bottom-navigator-tab: component checks * with icon 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://cdn0.iconfinder.com/data/icons/customicondesignoffice5/256/examples.png",
      }
    }
    style={
      Object {
        "height": 40,
        "marginBottom": undefined,
        "tintColor": "#8992A3",
        "width": 40,
      }
    }
  />
</View>
`;
